--- a/public/obs.html
+++ b/public/obs.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OBS Overlay</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <style>
         body {
@@ -210,8 +210,8 @@ p.red {
         })
     </script>
 
-    <script src="connection.js"></script>
-    <script src="app.js"></script>
+    <script src="js/connection.js"></script>
+    <script src="js/app.js"></script>
 </head>
 
 <body style="text-align:center">
