--- a/public/obs.html
+++ b/public/obs.html
@@ -186,6 +186,19 @@ p.red {
   text-shadow: 2px 3px 7px white, 
       0 10px 1px red;
 }
+
+#demoFont {
+font-family: Tahoma, Geneva, sans-serif;
+font-size: 15px;
+letter-spacing: 2px;
+word-spacing: 2px;
+color: #FFF;
+font-weight: 700;
+text-decoration: none;
+font-style: normal;
+font-variant: normal;
+text-transform: uppercase;
+}		
 	</style>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -215,7 +228,7 @@ p.red {
 </head>
 
 <body style="text-align:center">
-<p class="red">Awas !</p>
+<!--<p class="red">Awas !</p>
 <p class="yellow">Fotomu Bisa Muncul Sesuai Gambar</p>
 <figure class="snip1113 red like">
   <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample1.jpg" alt="pr-sample1" />
@@ -225,7 +238,7 @@ p.red {
       Tap
     </h4>
   </figcaption>
-</figure>
+</figure>-->
 <figure class="snip1113 blue hover gift"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample3.jpg" alt="pr-sample3" />
   <figcaption>
     <h3>Joshua <span>Franklin</span></h3>
@@ -233,15 +246,15 @@ p.red {
       Gift
     </h4>
   </figcaption>
-</figure>
-<figure class="snip1113 share"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample9.jpg" alt="pr-sample9" />
+</figure><br><p id="demoFont">JANGAN G!PT<br>NANTI FOTOMU MUNCUL</p>
+<!--<figure class="snip1113 share"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample9.jpg" alt="pr-sample9" />
   <figcaption>
     <h3>Dalene <span>Atkinson</span></h3>
     <h4>
       Share
     </h4>
   </figcaption>
-</figure>
+</figure>-->
 </body>
 
 </html>
