--- a/public/obs.html
+++ b/public/obs.html
@@ -239,9 +239,9 @@ text-transform: uppercase;
     </h4>
   </figcaption>
 </figure>-->
-<figure class="snip1113 blue hover gift"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/pr-sample3.jpg" alt="pr-sample3" />
+<figure class="snip1113 blue hover gift"><img src="freepalestine.jpg" alt="pr-sample3" />
   <figcaption>
-    <h3>Joshua <span>Franklin</span></h3>
+    <h3>Ahmad <span>Zaidan</span></h3>
     <h4> 
       Gift
     </h4>
