--- a/public/animasi.html
+++ b/public/animasi.html
@@ -76,8 +76,8 @@
 
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=0GRYfSrs"></script>
 
-    <script src="connection.js"></script>
-    <script src="__bubble.js"></script>
+    <script src="js/connection.js"></script>
+    <script src="js/__bubble.js"></script>
     
 
     
