--- a/public/animasi.html
+++ b/public/animasi.html
@@ -77,7 +77,7 @@
     <script src="https://code.responsivevoice.org/responsivevoice.js?key=0GRYfSrs"></script>
 
     <script src="js/connection.js"></script>
-    <script src="js/__bubble.js"></script>
+    <script src="js/bubble.js"></script>
     
 
     
