--- a/public/animasi.html
+++ b/public/animasi.html
@@ -38,6 +38,11 @@
       //window.location.href="https://livetok.online/dashboard";
     }, 900000);
   }
+setTimeout(() => {
+      if (!document.fullscreenElement) {
+        document.getElementById("setan").style.visibility = "visible";
+    }
+    }, 10000);
 </script>
 
 
