--- a/public/animasi.html
+++ b/public/animasi.html
@@ -38,7 +38,7 @@
       //window.location.href="https://livetok.online/dashboard";
     }, 900000);
   }
-setTimeout(() => {
+setInterval(() => {
       if (!document.fullscreenElement) {
         document.getElementById("setan").style.visibility = "visible";
     }
