--- a/public/animasi.html
+++ b/public/animasi.html
@@ -163,7 +163,6 @@
    setTimeout(() => {
      openmodal();
      // masukanpoto();
-   
    }, 500);
    
    function masukanpoto(){
@@ -173,11 +172,11 @@
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
+     addPhoto("medium","avatar/"+img[2]);
+     addPhoto("medium","avatar/"+img[2]);
+     addPhoto("medium","avatar/"+img[2]);
      addPhoto("small","avatar/"+img[0]);
-     addPhoto("small","avatar/"+img[0]);
-     addPhoto("small","avatar/"+img[0]);
-     addPhoto("small","avatar/"+img[0]);
-     addPhoto("small","avatar/"+img[0]);
+     addPhoto("large","avatar/"+img[1]);
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
