--- a/public/animasi.html
+++ b/public/animasi.html
@@ -201,7 +201,10 @@
      setTimeout(() => {
        masukanpoto();
      }, 4000);
-      
+	 
+     setInterval(() => {
+       masukanpoto();
+     }, 120000);
    }
    
        function toggleFullScreen() {
