--- a/public/animasi.html
+++ b/public/animasi.html
@@ -198,13 +198,13 @@
      setTimeout(() => {
        $("#petunjuk").hide(3000);
      }, 6000);
-     setTimeout(() => {
+     /*setTimeout(() => {
        masukanpoto();
      }, 4000);
-	 
+	 */
      setInterval(() => {
        masukanpoto();
-     }, 120000);
+     }, 60000);
    }
    
        function toggleFullScreen() {
