--- a/public/animasi.html
+++ b/public/animasi.html
@@ -15,6 +15,33 @@
          line-height: 100px;
          font-family: Arial, sans-serif;
          }
+	@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+
+svg {
+	font-family: "Russo One", sans-serif;
+	width: 100%; height: 100%;
+}
+svg text {
+	animation: stroke 4s infinite alternate;
+	stroke-width: 2;
+	stroke: #365FA0;
+	font-size: 50px;
+}
+@keyframes stroke {
+	0%   {
+		fill: rgba(72,138,204,0); stroke: rgba(54,95,160,1);
+		stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
+	}
+	70%  {fill: rgba(72,138,204,0); stroke: rgba(54,95,160,1); }
+	80%  {fill: rgba(72,138,204,0); stroke: rgba(54,95,160,1); stroke-width: 3; }
+	100% {
+		fill: rgba(72,138,204,1); stroke: rgba(54,95,160,0);
+		stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
+	}
+}
+
+.wrapper {background-color: #FFFFFF};
+
       </style>
       <script>
          // Mendapatkan URL saat ini
@@ -117,6 +144,13 @@
       <div id="petunjuk">
          <h3>OKE KEREN馃槑!!<br> TOMBOL PENGATURAN <br> ADA DIBAWAH 馃槉</h3>
       </div>
+      <div class="wrapper">
+	<svg>
+		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
+			G1 FT UNTUK TUTUPI FOTO LAWAN
+		</text>
+	</svg>
+	</div>
       <div id="animation-container">
          <!-- Animasi foto akan ditampilkan di sini -->
       </div>
