--- a/public/animasi.html
+++ b/public/animasi.html
@@ -203,6 +203,7 @@ svg text {
 	 var ukrn2 = ["small","medium"];
 	 shuffle(img);
 	 shuffle(ukrn);
+	shuffle(ukrn2);
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
