--- a/public/animasi.html
+++ b/public/animasi.html
@@ -15,6 +15,19 @@
          line-height: 100px;
          font-family: Arial, sans-serif;
          }
+	 .wrapper {
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         width: 700px; /* Sesuaikan dengan lebar elemen */
+         height: 120px; /* Sesuaikan dengan tinggi elemen */
+         background-color: #212427;
+         color: #fff;
+         text-align: center;
+         line-height: 100px;
+         font-family: Arial, sans-serif;
+         }     
 	@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
 
 svg {
@@ -40,14 +53,6 @@ svg text {
 	}
 }
 
-.wrapper {
-	background-color: #FFFFFF
-	 position: absolute; 
-            top: 0; 
-            left: 0; 
-            bottom: 0; 
-            z-index: -1;
-	 };
 
       </style>
       <script>
@@ -151,14 +156,14 @@ svg text {
       <div id="petunjuk">
          <h3>OKE KEREN馃槑!!<br> TOMBOL PENGATURAN <br> ADA DIBAWAH 馃槉</h3>
       </div>
-      <div id="animation-container">
-	     <div class="wrapper">
+	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
 			G1 FT UNTUK TUTUPI FOTO LAWAN
 		</text>
 	</svg>
 </div>
+      <div id="animation-container">
          <!-- Animasi foto akan ditampilkan di sini -->
       </div>
       <center>
