--- a/public/animasi.html
+++ b/public/animasi.html
@@ -17,13 +17,11 @@
          }
 	 .wrapper {
          position: absolute;
-         top: 50%;
+         top: 20px;
          left: 50%;
          transform: translate(-50%, -50%);
          width: 700px; /* Sesuaikan dengan lebar elemen */
          height: 120px; /* Sesuaikan dengan tinggi elemen */
-         background-color: #212427;
-         color: #fff;
          text-align: center;
          line-height: 100px;
          font-family: Arial, sans-serif;
