--- a/public/animasi.html
+++ b/public/animasi.html
@@ -157,7 +157,7 @@ svg text {
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			G1 FT UNTUK TUTUPI FOTO LAWAN
+			G1 FT UNTUK TUTUPI LAWAN
 		</text>
 	</svg>
 </div>
