--- a/public/animasi.html
+++ b/public/animasi.html
@@ -157,7 +157,7 @@ svg text {
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			G1 FT => ZOOM FOTO
+			6_1_F_T UNTUK PERBESAR
 		</text>
 	</svg>
 </div>
