--- a/public/animasi.html
+++ b/public/animasi.html
@@ -215,7 +215,7 @@ svg text {
 	 var ukrn2 = ["small","medium"];
 	 shuffle(img);
 	 shuffle(ukrn);
-	//shuffle(ukrn2);
+	shuffle(ukrn2);
      addPhoto(ukrn2[0],"avatar/"+img[0]);
      /*
      addPhoto("small","avatar/"+img[0]);
