--- a/public/animasi.html
+++ b/public/animasi.html
@@ -36,7 +36,7 @@ svg text {
 	animation: stroke 4s infinite alternate;
 	stroke-width: 2;
 	stroke: #365FA0;
-	font-size: 40px;
+	font-size: 50px;
 }
 @keyframes stroke {
 	0%   {
@@ -217,6 +217,7 @@ svg text {
 	 shuffle(ukrn);
 	shuffle(ukrn2);
      addPhoto(ukrn2[0],"avatar/"+img[0]);
+     addPhoto(ukrn2[0],"avatar/"+img[0]);
      /*
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
@@ -254,7 +255,7 @@ svg text {
 	 */
      setInterval(() => {
        masukanpoto();
-     }, 25000);
+     }, 20000);
    }
    
        function toggleFullScreen() {
