--- a/public/animasi.html
+++ b/public/animasi.html
@@ -17,7 +17,7 @@
          }
 	 .wrapper {
          position: absolute;
-         top: 20px;
+         top: 50px;
          left: 50%;
          transform: translate(-50%, -50%);
          width: 700px; /* Sesuaikan dengan lebar elemen */
@@ -157,7 +157,12 @@ svg text {
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			S A W E R I A
+			1 KOIN = FOTO GEDE
+		</text>
+	</svg>
+        <svg>
+		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
+			10 KOIN = FOTO FULL
 		</text>
 	</svg>
 </div>
