--- a/public/animasi.html
+++ b/public/animasi.html
@@ -151,9 +151,9 @@ svg text {
       </script>
    </head>
    <body style="background-size: cover;">
-      <div id="petunjuk">
+      <!--<div id="petunjuk">
          <h3>OKE KEREN馃槑!!<br> TOMBOL PENGATURAN <br> ADA DIBAWAH 馃槉</h3>
-      </div>
+      </div>-->
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
