--- a/public/animasi.html
+++ b/public/animasi.html
@@ -221,8 +221,9 @@ svg text {
 	 shuffle(img);
 	 shuffle(ukrn);
 	shuffle(ukrn2);
-     addPhoto(ukrn2[0],"avatar/"+img[0]);
-     addPhoto(ukrn2[0],"avatar/"+img[0]);
+     addPhoto("small","avatar/"+img[0]);
+     addPhoto("small","avatar/"+img[0]);
+     setTimeout(function () { addPhoto("medium","avatar/"+img[2]) }, 10000)
      /*
      addPhoto("small","avatar/"+img[0]);
      addPhoto("small","avatar/"+img[0]);
