--- a/public/animasi.html
+++ b/public/animasi.html
@@ -157,12 +157,12 @@ svg text {
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			1 KOIN = FOTO GEDE
+			1 ꓘO1N = FOTO GEDE
 		</text>
 	</svg>
         <svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			10 KOIN = FOTO FULL
+			10 ꓘO1N = FOTO FULL
 		</text>
 	</svg>
 </div>
