--- a/public/animasi.html
+++ b/public/animasi.html
@@ -157,12 +157,12 @@ svg text {
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			MⱯWⱯR = BESAR
+			MⱯWⱯR🌹 = BESAR
 		</text>
 	</svg>
         <svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			DONⱯT = FULL
+			HⱯT1💗 = FULL
 		</text>
 	</svg>
 </div>
