--- a/public/animasi.html
+++ b/public/animasi.html
@@ -17,7 +17,7 @@
          }
 	 .wrapper {
          position: absolute;
-         top: 40%;
+         top: 20px;
          left: 50%;
          transform: translate(-50%, -50%);
          width: 700px; /* Sesuaikan dengan lebar elemen */
@@ -157,12 +157,7 @@ svg text {
 	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			🌹BESAR
-		</text>
-	</svg>
-        <svg>
-		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			💗PENUH
+			🌹BESAR 💗PENUH
 		</text>
 	</svg>
 </div>
