--- a/public/animasi.html
+++ b/public/animasi.html
@@ -154,13 +154,13 @@ svg text {
       <!--<div id="petunjuk">
          <h3>OKE KEREN馃槑!!<br> TOMBOL PENGATURAN <br> ADA DIBAWAH 馃槉</h3>
       </div>-->
-	   <center><div class="wrapper">
+	   <div class="wrapper">
 	<svg>
 		<text x="50%" y="50%" dy=".35em" text-anchor="middle">
-			🌹BESAR 💗PENUH
+			MⱯWⱯꓤ(BESAR) DONⱯꓕ(PENUH)
 		</text>
 	</svg>
-</div></center>
+</div>
       <div id="animation-container">
          <!-- Animasi foto akan ditampilkan di sini -->
       </div>
