--- a/public/animasi.html
+++ b/public/animasi.html
@@ -7,7 +7,7 @@
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
-         width: 700px; /* Sesuaikan dengan lebar elemen */
+         width: auto; /* Sesuaikan dengan lebar elemen */
          height: 120px; /* Sesuaikan dengan tinggi elemen */
          background-color: #212427;
          color: #fff;
@@ -20,7 +20,7 @@
          top: 50px;
          left: 50%;
          transform: translate(-50%, -50%);
-         width: 700px; /* Sesuaikan dengan lebar elemen */
+         width: auto; /* Sesuaikan dengan lebar elemen */
          height: 120px; /* Sesuaikan dengan tinggi elemen */
          text-align: center;
          line-height: 100px;
